# research-intelligence-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: ablation.py  evaluate.py  ingest.py
src/: __init__.py  config.py  monitoring.py  pipeline.py
src/data/: __init__.py  arxiv_fetcher.py  models.py  pdf_extractor.py
src/evaluation/: __init__.py  llm_judge.py  metrics.py  ragas_eval.py
src/generation/: __init__.py  generator.py
src/retrieval/: bm25.py  hybrid.py  reranker.py  retriever.py
src/vectorstore/: __init__.py  chunker.py  embedder.py  faiss_store.py
tests/: test_arxiv_fetcher.py  test_bm25.py  test_chunker.py  test_config.py  test_faiss_store.py  test_hybrid.py  test_metrics.py  test_models.py  test_monitoring.py  test_retriever.py
